fixed the scrollbar issue being too large

--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -378,11 +378,11 @@ ul.mysidebar.nav {
   text-decoration: none;
   position: fixed;
   height: 75vh;
-  width: 20%;
+  width: 300px;
   min-width: 300px;
 
   overflow-y: auto;
-  overflow-x: hidden;
+
   overflow-x: hidden;
   list-style: none;
   scrollbar-width: thin;
